force-app/main/default/objects/KB_Jargon_Term__c/KB_Jargon_Term__c.object-meta.xml
<CustomObject>
    <description>Stores configurable jargon terms and phrases flagged during Clarity scoring.</description>
    <label>KB Jargon Term</label>
    <nameField>
        <displayFormat>JRG-{0000}</displayFormat>
        <label>Jargon Term Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KB Jargon Terms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>