force-app/main/default/objects/KB_Jargon_Term__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Categorizes the type of jargon for Admin Setup Wizard UI grouping.</description>
    <inlineHelpText>Optional category for organizing jargon terms in the setup wizard.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Jargon</fullName>
            </value>
            <value>
                <fullName>Acronym</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>