force-app/main/default/objects/KB_Jargon_Term__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this term is actively checked during Clarity scoring.</description>
    <inlineHelpText>Uncheck to temporarily disable this jargon term without deleting it.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>