force-app/main/default/objects/KB_Jargon_Term__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>The jargon term or phrase to detect in articles.</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the jargon term or phrase (case-insensitive matching).</inlineHelpText>
    <label>Term</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>